--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,34 +22,35 @@ set(PROJECT_SOURCES
         dialog.ui
         dialog.h
         dialog.cpp
+        rsc_img.qrc
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(QTC_YGO2
+    qt_add_executable(QTC_YGO
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET QTC_YGO2 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET QTC_YGO APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(QTC_YGO2 SHARED
+        add_library(QTC_YGO SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(QTC_YGO2
+        add_executable(QTC_YGO
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(QTC_YGO2 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(QTC_YGO PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-set_target_properties(QTC_YGO2 PROPERTIES
+set_target_properties(QTC_YGO PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -57,12 +58,12 @@ set_target_properties(QTC_YGO2 PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-install(TARGETS QTC_YGO2
+install(TARGETS QTC_YGO
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(QTC_YGO2)
+    qt_finalize_executable(QTC_YGO)
 endif()
